@@ -22,12 +22,15 @@ package org.apache.cayenne.access.types;
 import org.apache.cayenne.access.DataContext;
 import org.apache.cayenne.di.Inject;
 import org.apache.cayenne.query.ObjectSelect;
+import org.apache.cayenne.query.SQLExec;
+import org.apache.cayenne.query.SQLSelect;
 import org.apache.cayenne.test.jdbc.DBHelper;
 import org.apache.cayenne.testdo.datetime.DurationTestEntity;
 import org.apache.cayenne.testdo.datetime.LocalDateTestEntity;
 import org.apache.cayenne.testdo.datetime.LocalDateTimeTestEntity;
 import org.apache.cayenne.testdo.datetime.LocalTimeTestEntity;
 import org.apache.cayenne.testdo.datetime.PeriodTestEntity;
+import org.apache.cayenne.unit.MySQLUnitDbAdapter;
 import org.apache.cayenne.unit.UnitDbAdapter;
 import org.apache.cayenne.unit.di.runtime.CayenneProjects;
 import org.apache.cayenne.unit.di.runtime.RuntimeCase;
@@ -43,170 +46,227 @@ import java.time.LocalTime;
 import java.time.Period;
 import java.time.temporal.ChronoField;
 import java.time.temporal.TemporalField;
+import java.util.TimeZone;
 
 import static org.junit.Assert.*;
 
 @UseCayenneRuntime(CayenneProjects.DATE_TIME_PROJECT)
 public class DateTimeTypesIT extends RuntimeCase {
 
-	@Inject
-	private DataContext context;
+    @Inject
+    private DataContext context;
 
-	@Inject
-	private UnitDbAdapter unitDbAdapter;
+    @Inject
+    private UnitDbAdapter unitDbAdapter;
 
-	@Inject
-	private DBHelper dbHelper;
+    @Inject
+    private DBHelper dbHelper;
 
-	@Before
-	public void before() throws SQLException {
-		dbHelper.deleteAll("LOCAL_DATE_TEST");
-		dbHelper.deleteAll("LOCAL_DATETIME_TEST");
-		dbHelper.deleteAll("LOCAL_TIME_TEST");
-		dbHelper.deleteAll("DURATION_TEST");
-		dbHelper.deleteAll("PERIOD_TEST");
-	}
+    @Before
+    public void before() throws SQLException {
+        dbHelper.deleteAll("LOCAL_DATE_TEST");
+        dbHelper.deleteAll("LOCAL_DATETIME_TEST");
+        dbHelper.deleteAll("LOCAL_TIME_TEST");
+        dbHelper.deleteAll("DURATION_TEST");
+        dbHelper.deleteAll("PERIOD_TEST");
+    }
 
-	@Test
-	public void testLocalDate_Null() {
-		LocalDateTestEntity localDateTestEntity = context.newObject(LocalDateTestEntity.class);
-		localDateTestEntity.setDate(null);
+    @Test
+    public void testLocalDate_Null() {
+        LocalDateTestEntity localDateTestEntity = context.newObject(LocalDateTestEntity.class);
+        localDateTestEntity.setDate(null);
 
-		context.commitChanges();
+        context.commitChanges();
 
-		LocalDateTestEntity testRead = ObjectSelect.query(LocalDateTestEntity.class).selectOne(context);
+        LocalDateTestEntity testRead = ObjectSelect.query(LocalDateTestEntity.class).selectOne(context);
 
-		assertNull(testRead.getDate());
-	}
+        assertNull(testRead.getDate());
+    }
 
-	@Test
-	public void testLocalDate() {
-		LocalDateTestEntity localDateTestEntity = context.newObject(LocalDateTestEntity.class);
-		LocalDate localDate = LocalDate.now();
-		localDateTestEntity.setDate(localDate);
+    @Test
+    public void testLocalDate() {
+        LocalDateTestEntity localDateTestEntity = context.newObject(LocalDateTestEntity.class);
+        LocalDate localDate = LocalDate.now();
+        localDateTestEntity.setDate(localDate);
 
-		context.commitChanges();
+        context.commitChanges();
 
-		LocalDateTestEntity testRead = ObjectSelect.query(LocalDateTestEntity.class).selectOne(context);
+        LocalDateTestEntity testRead = ObjectSelect.query(LocalDateTestEntity.class).selectOne(context);
 
-		assertNotNull(testRead.getDate());
-		assertEquals(LocalDate.class, testRead.getDate().getClass());
-		assertEquals(localDate, testRead.getDate());
-	}
+        assertNotNull(testRead.getDate());
+        assertEquals(LocalDate.class, testRead.getDate().getClass());
+        assertEquals(localDate, testRead.getDate());
+    }
 
-	@Test
-	public void testLocalTime() {
-		LocalTimeTestEntity localTimeTestEntity = context.newObject(LocalTimeTestEntity.class);
-		LocalTime localTime = LocalTime.now();
-		localTimeTestEntity.setTime(localTime);
+    @Test
+    public void testLocalTime() {
+        LocalTimeTestEntity localTimeTestEntity = context.newObject(LocalTimeTestEntity.class);
+        LocalTime localTime = LocalTime.now();
+        localTimeTestEntity.setTime(localTime);
 
-		context.commitChanges();
+        context.commitChanges();
 
-		LocalTimeTestEntity testRead = ObjectSelect.query(LocalTimeTestEntity.class).selectOne(context);
+        LocalTimeTestEntity testRead = ObjectSelect.query(LocalTimeTestEntity.class).selectOne(context);
 
-		TemporalField testValue = unitDbAdapter.supportsPreciseTime()
-				? ChronoField.MILLI_OF_DAY
-				: ChronoField.SECOND_OF_DAY;
+        TemporalField testValue = unitDbAdapter.supportsPreciseTime()
+                ? ChronoField.MILLI_OF_DAY
+                : ChronoField.SECOND_OF_DAY;
 
-		assertNotNull(testRead.getTime());
-		assertEquals(LocalTime.class, testRead.getTime().getClass());
-		assertEquals(localTime.toSecondOfDay(), testRead.getTime().toSecondOfDay());
-		assertEquals(localTime.get(testValue), testRead.getTime().get(testValue));
-	}
+        assertNotNull(testRead.getTime());
+        assertEquals(LocalTime.class, testRead.getTime().getClass());
+        assertEquals(localTime.toSecondOfDay(), testRead.getTime().toSecondOfDay());
+        assertEquals(localTime.get(testValue), testRead.getTime().get(testValue));
+    }
 
-	@Test
-	public void testLocalDateTime() {
-		LocalDateTimeTestEntity localDateTimeTestEntity = context.newObject(LocalDateTimeTestEntity.class);
-		// round up seconds fraction
-		// reason: on MySQL field should be defined as TIMESTAMP(fractionSecondsPrecision) to support it
-		LocalDateTime localDateTime = LocalDateTime.now().with(ChronoField.NANO_OF_SECOND, 0);
-		localDateTimeTestEntity.setTimestamp(localDateTime);
+    @Test
+    public void testLocalDateTime() {
+        LocalDateTimeTestEntity localDateTimeTestEntity = context.newObject(LocalDateTimeTestEntity.class);
+        // round up seconds fraction
+        // reason: on MySQL field should be defined as TIMESTAMP(fractionSecondsPrecision) to support it
+        LocalDateTime localDateTime = LocalDateTime.now().with(ChronoField.NANO_OF_SECOND, 0);
+        localDateTimeTestEntity.setTimestamp(localDateTime);
 
-		context.commitChanges();
+        context.commitChanges();
 
-		LocalDateTimeTestEntity testRead = ObjectSelect.query(LocalDateTimeTestEntity.class).selectOne(context);
+        LocalDateTimeTestEntity testRead = ObjectSelect.query(LocalDateTimeTestEntity.class).selectOne(context);
 
-		assertNotNull(testRead.getTimestamp());
-		assertEquals(LocalDateTime.class, testRead.getTimestamp().getClass());
-		assertEquals(localDateTime, testRead.getTimestamp());
+        assertNotNull(testRead.getTimestamp());
+        assertEquals(LocalDateTime.class, testRead.getTimestamp().getClass());
+        assertEquals(localDateTime, testRead.getTimestamp());
 
-	}
+    }
 
-	@Test
-	public void columnSelectWithLocalDateTime() {
-		// round up seconds fraction
-		// reason: on MySQL field should be defined as TIMESTAMP(fractionSecondsPrecision) to support it
-		LocalDateTime localDateTime = LocalDateTime.now().with(ChronoField.NANO_OF_SECOND, 0);
+    @Test
+    public void testLocalDateTime_DST_Select() {
 
-		LocalDateTimeTestEntity localDateTimeTestEntity = context.newObject(LocalDateTimeTestEntity.class);
-		localDateTimeTestEntity.setTimestamp(localDateTime);
+        if (!(unitDbAdapter instanceof MySQLUnitDbAdapter)) {
+            // skip other DB's for now until we can test across all of them
+            return;
+        }
 
-		context.commitChanges();
+        // not using TableHelper to avoid PreparedStatement parameter interactions for this timestamp
+        SQLExec.query("insert into LOCAL_DATETIME_TEST values (1, '2021-03-14 02:35:00')").execute(context);
 
-		LocalDateTime value = ObjectSelect.query(LocalDateTimeTestEntity.class)
-				.column(LocalDateTimeTestEntity.TIMESTAMP)
-				.selectOne(context);
-		assertEquals(localDateTime, value);
+        // set the TZ where this time doesn't exist because of the DST switchover at 2 AM
+        TimeZone defaultTz = TimeZone.getDefault();
+        TimeZone.setDefault(TimeZone.getTimeZone("America/New_York"));
 
-		LocalDateTime value2 = ObjectSelect.query(LocalDateTimeTestEntity.class)
-				.min(LocalDateTimeTestEntity.TIMESTAMP)
-				.selectOne(context);
-		assertEquals(localDateTime, value2);
-	}
+        try {
+            // LocalDateTime is TZ-agnostic, so the timestamp should not be rewound to 3 AM just because it happens to
+            // match the DST "gap" in US timezones
+            LocalDateTime value = ObjectSelect.query(LocalDateTimeTestEntity.class)
+                    .column(LocalDateTimeTestEntity.TIMESTAMP)
+                    .selectOne(context);
 
-	@Test
-	public void testDuration() {
-		DurationTestEntity durationTestEntity = context.newObject(DurationTestEntity.class);
-		Duration duration = Duration.ofDays(10);
-		durationTestEntity.setDurationBigInt(duration);
-		durationTestEntity.setDurationDecimal(duration);
-		durationTestEntity.setDurationInt(duration);
-		durationTestEntity.setDurationLongVarchar(duration);
-		durationTestEntity.setDurationNumeric(duration);
-		durationTestEntity.setDurationVarchar(duration);
+            assertEquals(LocalDateTime.of(2021, 3, 14, 2, 35, 0), value);
+        } finally {
+            TimeZone.setDefault(defaultTz);
+        }
+    }
 
-		context.commitChanges();
+    @Test
+    public void testLocalDateTime_DST_Insert() {
 
-		DurationTestEntity testRead = ObjectSelect.query(DurationTestEntity.class).selectOne(context);
+        if (!(unitDbAdapter instanceof MySQLUnitDbAdapter)) {
+            // skip other DB's for now until we can test across all of them
+            return;
+        }
 
-		assertNotNull(testRead.getDurationBigInt());
-		assertEquals(Duration.class, testRead.getDurationBigInt().getClass());
-		assertEquals(duration, testRead.getDurationBigInt());
+        // set the TZ where this time doesn't exist because of the DST switchover at 2 AM
+        TimeZone defaultTz = TimeZone.getDefault();
+        TimeZone.setDefault(TimeZone.getTimeZone("America/New_York"));
 
-		assertNotNull(testRead.getDurationDecimal());
-		assertEquals(Duration.class, testRead.getDurationDecimal().getClass());
-		assertEquals(duration, testRead.getDurationDecimal());
+        try {
 
-		assertNotNull(testRead.getDurationInt());
-		assertEquals(Duration.class, testRead.getDurationInt().getClass());
-		assertEquals(duration, testRead.getDurationInt());
+            LocalDateTimeTestEntity o = context.newObject(LocalDateTimeTestEntity.class);
+            o.setTimestamp(LocalDateTime.of(2021, 3, 14, 2, 35, 0));
+            context.commitChanges();
 
-		assertNotNull(testRead.getDurationLongVarchar());
-		assertEquals(Duration.class, testRead.getDurationLongVarchar().getClass());
-		assertEquals(duration, testRead.getDurationLongVarchar());
+            String val = SQLSelect
+                    .scalarQuery("select CAST(TimestampField as CHAR) from LOCAL_DATETIME_TEST", String.class)
+                    .selectOne(context);
 
-		assertNotNull(testRead.getDurationNumeric());
-		assertEquals(Duration.class, testRead.getDurationNumeric().getClass());
-		assertEquals(duration, testRead.getDurationNumeric());
+            assertEquals("2021-03-14 02:35:00", val);
+        } finally {
+            TimeZone.setDefault(defaultTz);
+        }
+    }
 
-		assertNotNull(testRead.getDurationVarchar());
-		assertEquals(Duration.class, testRead.getDurationVarchar().getClass());
-		assertEquals(duration, testRead.getDurationVarchar());
-	}
+    @Test
+    public void columnSelectWithLocalDateTime() {
+        // round up seconds fraction
+        // reason: on MySQL field should be defined as TIMESTAMP(fractionSecondsPrecision) to support it
+        LocalDateTime localDateTime = LocalDateTime.now().with(ChronoField.NANO_OF_SECOND, 0);
 
-	@Test
-	public void testPeriod() {
-		PeriodTestEntity periodTestEntity = context.newObject(PeriodTestEntity.class);
-		Period period = Period.of(100, 10, 5);
-		periodTestEntity.setPeriodField(period);
+        LocalDateTimeTestEntity localDateTimeTestEntity = context.newObject(LocalDateTimeTestEntity.class);
+        localDateTimeTestEntity.setTimestamp(localDateTime);
 
-		context.commitChanges();
+        context.commitChanges();
 
-		PeriodTestEntity testRead = ObjectSelect.query(PeriodTestEntity.class).selectOne(context);
+        LocalDateTime value = ObjectSelect.query(LocalDateTimeTestEntity.class)
+                .column(LocalDateTimeTestEntity.TIMESTAMP)
+                .selectOne(context);
+        assertEquals(localDateTime, value);
 
-		assertNotNull(testRead.getPeriodField());
-		assertEquals(Period.class, testRead.getPeriodField().getClass());
-		assertEquals(period, testRead.getPeriodField());
-	}
+        LocalDateTime value2 = ObjectSelect.query(LocalDateTimeTestEntity.class)
+                .min(LocalDateTimeTestEntity.TIMESTAMP)
+                .selectOne(context);
+        assertEquals(localDateTime, value2);
+    }
+
+    @Test
+    public void testDuration() {
+        DurationTestEntity durationTestEntity = context.newObject(DurationTestEntity.class);
+        Duration duration = Duration.ofDays(10);
+        durationTestEntity.setDurationBigInt(duration);
+        durationTestEntity.setDurationDecimal(duration);
+        durationTestEntity.setDurationInt(duration);
+        durationTestEntity.setDurationLongVarchar(duration);
+        durationTestEntity.setDurationNumeric(duration);
+        durationTestEntity.setDurationVarchar(duration);
+
+        context.commitChanges();
+
+        DurationTestEntity testRead = ObjectSelect.query(DurationTestEntity.class).selectOne(context);
+
+        assertNotNull(testRead.getDurationBigInt());
+        assertEquals(Duration.class, testRead.getDurationBigInt().getClass());
+        assertEquals(duration, testRead.getDurationBigInt());
+
+        assertNotNull(testRead.getDurationDecimal());
+        assertEquals(Duration.class, testRead.getDurationDecimal().getClass());
+        assertEquals(duration, testRead.getDurationDecimal());
+
+        assertNotNull(testRead.getDurationInt());
+        assertEquals(Duration.class, testRead.getDurationInt().getClass());
+        assertEquals(duration, testRead.getDurationInt());
+
+        assertNotNull(testRead.getDurationLongVarchar());
+        assertEquals(Duration.class, testRead.getDurationLongVarchar().getClass());
+        assertEquals(duration, testRead.getDurationLongVarchar());
+
+        assertNotNull(testRead.getDurationNumeric());
+        assertEquals(Duration.class, testRead.getDurationNumeric().getClass());
+        assertEquals(duration, testRead.getDurationNumeric());
+
+        assertNotNull(testRead.getDurationVarchar());
+        assertEquals(Duration.class, testRead.getDurationVarchar().getClass());
+        assertEquals(duration, testRead.getDurationVarchar());
+    }
+
+    @Test
+    public void testPeriod() {
+        PeriodTestEntity periodTestEntity = context.newObject(PeriodTestEntity.class);
+        Period period = Period.of(100, 10, 5);
+        periodTestEntity.setPeriodField(period);
+
+        context.commitChanges();
+
+        PeriodTestEntity testRead = ObjectSelect.query(PeriodTestEntity.class).selectOne(context);
+
+        assertNotNull(testRead.getPeriodField());
+        assertEquals(Period.class, testRead.getPeriodField().getClass());
+        assertEquals(period, testRead.getPeriodField());
+    }
 
 }
